// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
await(1)
=====================================output=====================================
;(await)(1)

================================================================================
`;

exports[`snippet: #1 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
(await)(1)
=====================================output=====================================
;(await)(1)

================================================================================
`;

exports[`snippet: #2 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
await(1,2)
=====================================output=====================================
;(await)(1, 2)

================================================================================
`;

exports[`snippet: #3 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
(await)(1,2)
=====================================output=====================================
;(await)(1, 2)

================================================================================
`;

exports[`snippet: #4 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
await()
=====================================output=====================================
;(await)()

================================================================================
`;

exports[`snippet: #5 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
(await)()
=====================================output=====================================
;(await)()

================================================================================
`;

exports[`snippet: #6 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
await + 1
=====================================output=====================================
;(await) + 1

================================================================================
`;

exports[`snippet: #7 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
(await) + 1
=====================================output=====================================
;(await) + 1

================================================================================
`;

exports[`snippet: #8 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
await - 1
=====================================output=====================================
;(await) - 1

================================================================================
`;

exports[`snippet: #9 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
(await) - 1
=====================================output=====================================
;(await) - 1

================================================================================
`;

exports[`snippet: #10 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
await[0]
=====================================output=====================================
;(await)[0]

================================================================================
`;

exports[`snippet: #11 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
(await)[0]
=====================================output=====================================
;(await)[0]

================================================================================
`;
